hover-first-img

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="centratura">
 
       <div class="img-prodotto">
-        <!-- <img class= "base" src="img/1.webp" alt="immagine uomo con maglia bianca">
-        <img class="hover" src="img/1b.webp" alt="immagine uomo maglia bianca con camicia a quadri scura"> -->
+        <img class= "base" src="img/1.webp" alt="immagine uomo con maglia bianca">
+        <img class="hover" src="img/1b.webp" alt="immagine uomo maglia bianca con camicia a quadri scura">
         <div class="text-img">
           
         </div>
