--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Replica Zalando</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;500&display=swap" rel="stylesheet"> 
 </head>
 <body>
   <div class="container clearfix">
@@ -21,7 +24,7 @@
           <p class="sconto-percentuale">-50%</p> 
         </div>
         <div class="container-sostenibilità">
-          <p class="sostenibilità">sostenibilità</p>
+          <p class="sostenibilità">Sostenibilità</p>
         </div>
         <div class="text-img">
           <p>Levi's</p>
@@ -31,8 +34,46 @@
       </div>
 
       <div class="img-prodotto">
-        <img class= "base" src="img/1.webp" alt="immagine uomo con maglia bianca">
-        <img class="hover" src="img/1b.webp" alt="immagine uomo maglia bianca con camicia a quadri scura">
+        <img class= "base" src="img/2.webp" alt="immagine uomo con maglia bianca">
+        <img class="hover" src="img/2b.webp" alt="immagine uomo maglia bianca con camicia a quadri scura">
+        <div class="preferiti">
+        <p class="hearts">&hearts;</p> 
+        </div>
+        <div class="container-sconto-percentuale">
+          <p class="sconto-percentuale">-30%</p> 
+        </div>
+        <div class="container-sostenibilità">
+          <p class="sostenibilità">Sostenibilità</p>
+        </div>
+        <div class="text-img">
+          <p>Guess</p>
+          <p class="titolo-prodotto">ROSES TEE</p>
+          <p class="sconto">20,99 &euro; <span class="prezzo-vero"> 29,99 &euro;</span></p>
+        </div>
+      </div>
+
+      <div class="img-prodotto">
+        <img class= "base" src="img/3.webp" alt="immagine uomo con maglia bianca">
+        <img class="hover" src="img/3b.webp" alt="immagine uomo maglia bianca con camicia a quadri scura">
+        <div class="preferiti">
+        <p class="hearts">&hearts;</p> 
+        </div>
+        <div class="container-sconto-percentuale">
+          <p class="sconto-percentuale">-30%</p> 
+        </div>
+        <div class="container-sostenibilità">
+          <p class="sostenibilità">Sostenibilità</p>
+        </div>
+        <div class="text-img">
+          <p>Come zucchero filato</p>
+          <p class="titolo-prodotto">VOGLIA DI COLORI PASTELLO</p>
+          <p class="sconto">129,99 &euro;</p>
+        </div>
+      </div>
+
+      <div class="img-prodotto">
+        <img class= "base" src="img/4.webp" alt="immagine uomo con maglia bianca">
+        <img class="hover" src="img/4b.webp" alt="immagine uomo maglia bianca con camicia a quadri scura">
         <div class="preferiti">
         <p class="hearts">&hearts;</p> 
         </div>
@@ -40,88 +81,41 @@
           <p class="sconto-percentuale">-50%</p> 
         </div>
         <div class="container-sostenibilità">
-          <p class="sostenibilità">sostenibilità</p>
+          <p class="sostenibilità">Sostenibilità</p>
         </div>
         <div class="text-img">
           <p>Levi's</p>
-          <p class="titolo-prodotto">RELAXED FIT TEE UNISEX</p>
+          <p class="titolo-prodotto">TEE UNISEX</p>
           <p class="sconto">14,99 &euro; <span class="prezzo-vero"> 29,99 &euro;</span></p>
         </div>
       </div>
 
       <div class="img-prodotto">
-        <img class= "base" src="img/1.webp" alt="immagine uomo con maglia bianca">
-        <img class="hover" src="img/1b.webp" alt="immagine uomo maglia bianca con camicia a quadri scura">
+        <img class= "base" src="img/5.webp" alt="immagine uomo con maglia bianca">
+        <img class="hover" src="img/5b.webp" alt="immagine uomo maglia bianca con camicia a quadri scura">
         <div class="preferiti">
         <p class="hearts">&hearts;</p> 
         </div>
-        <div class="container-sconto-percentuale">
-          <p class="sconto-percentuale">-50%</p> 
-        </div>
-        <div class="container-sostenibilità">
-          <p class="sostenibilità">sostenibilità</p>
-        </div>
         <div class="text-img">
-          <p>Levi's</p>
-          <p class="titolo-prodotto">RELAXED FIT TEE UNISEX</p>
-          <p class="sconto">14,99 &euro; <span class="prezzo-vero"> 29,99 &euro;</span></p>
+          <p>Maya Deluxe</p>
+          <p class="titolo-prodotto">STRIPE BODICE</p>
+          <p class="sconto">99,99 &euro; </p>
         </div>
       </div>
 
       <div class="img-prodotto">
-        <img class= "base" src="img/1.webp" alt="immagine uomo con maglia bianca">
-        <img class="hover" src="img/1b.webp" alt="immagine uomo maglia bianca con camicia a quadri scura">
+        <img class= "base" src="img/6.webp" alt="immagine uomo con maglia bianca">
+        <img class="hover" src="img/6b.webp" alt="immagine uomo maglia bianca con camicia a quadri scura">
         <div class="preferiti">
         <p class="hearts">&hearts;</p> 
         </div>
-        <div class="container-sconto-percentuale">
-          <p class="sconto-percentuale">-50%</p> 
-        </div>
-        <div class="container-sostenibilità">
-          <p class="sostenibilità">sostenibilità</p>
+        <div id= "sostenibilità" class="container-sostenibilità">
+          <p class="sostenibilità">Sostenibilità</p>
         </div>
         <div class="text-img">
-          <p>Levi's</p>
-          <p class="titolo-prodotto">RELAXED FIT TEE UNISEX</p>
-          <p class="sconto">14,99 &euro; <span class="prezzo-vero"> 29,99 &euro;</span></p>
-        </div>
-      </div>
-
-      <div class="img-prodotto">
-        <img class= "base" src="img/1.webp" alt="immagine uomo con maglia bianca">
-        <img class="hover" src="img/1b.webp" alt="immagine uomo maglia bianca con camicia a quadri scura">
-        <div class="preferiti">
-        <p class="hearts">&hearts;</p> 
-        </div>
-        <div class="container-sconto-percentuale">
-          <p class="sconto-percentuale">-50%</p> 
-        </div>
-        <div class="container-sostenibilità">
-          <p class="sostenibilità">sostenibilità</p>
-        </div>
-        <div class="text-img">
-          <p>Levi's</p>
-          <p class="titolo-prodotto">RELAXED FIT TEE UNISEX</p>
-          <p class="sconto">14,99 &euro; <span class="prezzo-vero"> 29,99 &euro;</span></p>
-        </div>
-      </div>
-
-      <div class="img-prodotto">
-        <img class= "base" src="img/1.webp" alt="immagine uomo con maglia bianca">
-        <img class="hover" src="img/1b.webp" alt="immagine uomo maglia bianca con camicia a quadri scura">
-        <div class="preferiti">
-        <p class="hearts">&hearts;</p> 
-        </div>
-        <div class="container-sconto-percentuale">
-          <p class="sconto-percentuale">-50%</p> 
-        </div>
-        <div class="container-sostenibilità">
-          <p class="sostenibilità">sostenibilità</p>
-        </div>
-        <div class="text-img">
-          <p>Levi's</p>
-          <p class="titolo-prodotto">RELAXED FIT TEE UNISEX</p>
-          <p class="sconto">14,99 &euro; <span class="prezzo-vero"> 29,99 &euro;</span></p>
+          <p>Espirit</p>
+          <p class="titolo-prodotto">MAGLIONE - BLACK</p>
+          <p class="sconto">29,99 &euro;</p>
         </div>
       </div>
     </div>
