sistemazione-commenti-e-margini

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container clearfix">
     <div class="centratura">
-
+      <!-- prima immagine -->
       <div class="img-prodotto">
         <img class= "base" src="img/1.webp" alt="immagine uomo con maglia bianca">
         <img class="hover" src="img/1b.webp" alt="immagine uomo maglia bianca con camicia a quadri scura">
@@ -32,7 +32,9 @@
           <p class="sconto">14,99 &euro; <span class="prezzo-vero"> 29,99 &euro;</span></p>
         </div>
       </div>
+      <!-- fine prima immagine -->
 
+      <!-- seconda immagine -->
       <div class="img-prodotto">
         <img class= "base" src="img/2.webp" alt="immagine uomo con maglia bianca">
         <img class="hover" src="img/2b.webp" alt="immagine uomo maglia bianca con camicia a quadri scura">
@@ -51,7 +53,9 @@
           <p class="sconto">20,99 &euro; <span class="prezzo-vero"> 29,99 &euro;</span></p>
         </div>
       </div>
+      <!-- fine seconda immagine -->
 
+      <!-- terza immagine -->
       <div class="img-prodotto">
         <img class= "base" src="img/3.webp" alt="immagine uomo con maglia bianca">
         <img class="hover" src="img/3b.webp" alt="immagine uomo maglia bianca con camicia a quadri scura">
@@ -70,7 +74,9 @@
           <p class="sconto">129,99 &euro;</p>
         </div>
       </div>
+      <!-- fine terza immagine -->
 
+      <!-- quarta immagine -->
       <div class="img-prodotto">
         <img class= "base" src="img/4.webp" alt="immagine uomo con maglia bianca">
         <img class="hover" src="img/4b.webp" alt="immagine uomo maglia bianca con camicia a quadri scura">
@@ -89,7 +95,9 @@
           <p class="sconto">14,99 &euro; <span class="prezzo-vero"> 29,99 &euro;</span></p>
         </div>
       </div>
+      <!-- fine quarta immagine -->
 
+      <!-- quinta immagine -->
       <div class="img-prodotto">
         <img class= "base" src="img/5.webp" alt="immagine uomo con maglia bianca">
         <img class="hover" src="img/5b.webp" alt="immagine uomo maglia bianca con camicia a quadri scura">
@@ -102,7 +110,9 @@
           <p class="sconto">99,99 &euro; </p>
         </div>
       </div>
+      <!-- fine quinta immagine -->
 
+      <!-- sesta immagine -->
       <div class="img-prodotto">
         <img class= "base" src="img/6.webp" alt="immagine uomo con maglia bianca">
         <img class="hover" src="img/6b.webp" alt="immagine uomo maglia bianca con camicia a quadri scura">
@@ -118,6 +128,7 @@
           <p class="sconto">29,99 &euro;</p>
         </div>
       </div>
+      <!-- fine sesta immagine -->
     </div>
     </div>
   </div>
